chore: update changelog standard-version types

--- a/package.json
+++ b/package.json
@@ -136,7 +136,8 @@
       },
       {
         "type": "perf",
-        "hidden": true
+        "section": "Performance",
+        "hidden": false
       },
       {
         "type": "test",
