--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,7 @@ jobs:
     name: Node Tests
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         node-version:
           - 12.19.0
@@ -74,10 +75,11 @@ jobs:
   conformance-suite:
     runs-on: ubuntu-latest
     env:
-      VERSION: release-v4.0.10
+      VERSION: release-v4.1.6
       SUITE_BASE_URL: https://localhost.emobix.co.uk:8443
       SETUP: ${{ matrix.setup }}
     strategy:
+      fail-fast: false
       matrix:
         setup:
           - '{"plan":"oidcc-basic-certification-test-plan","server_metadata":"discovery","client_registration":"dynamic_client"}'
@@ -92,10 +94,14 @@ jobs:
           - '{"plan":"oidcc-dynamic-certification-test-plan","response_type":"code id_token token","skip":"oidcc-server-rotate-keys"}'
           - '{"plan":"oidcc-backchannel-rp-initiated-logout-certification-test-plan","response_type":"code","client_registration":"dynamic_client"}'
           - '{"plan":"oidcc-rp-initiated-logout-certification-test-plan","response_type":"code","client_registration":"dynamic_client"}'
-          - '{"plan":"fapi-rw-id2-test-plan","configuration":"./certification/fapi/pkjwt.json","client_auth_type":"private_key_jwt","fapi_profile":"plain_fapi","fapi_response_mode":"plain_response"}'
-          - '{"plan":"fapi-rw-id2-test-plan","configuration":"./certification/fapi/pkjwt.json","client_auth_type":"private_key_jwt","fapi_profile":"plain_fapi","fapi_response_mode":"jarm"}'
-          - '{"plan":"fapi-rw-id2-test-plan","configuration":"./certification/fapi/mtls.json","client_auth_type":"mtls","fapi_profile":"plain_fapi","fapi_response_mode":"plain_response"}'
-          - '{"plan":"fapi-rw-id2-test-plan","configuration":"./certification/fapi/mtls.json","client_auth_type":"mtls","fapi_profile":"plain_fapi","fapi_response_mode":"jarm"}'
+          - '{"plan":"fapi-rw-id2-test-plan","configuration":"./certification/fapi/pkjwt.json","fapi_auth_request_method":"by_value","client_auth_type":"private_key_jwt","fapi_profile":"plain_fapi","fapi_response_mode":"plain_response"}'
+          - '{"plan":"fapi-rw-id2-test-plan","configuration":"./certification/fapi/pkjwt.json","fapi_auth_request_method":"pushed","client_auth_type":"private_key_jwt","fapi_profile":"plain_fapi","fapi_response_mode":"plain_response","skip":"fapi-rw-id2-ensure-response-type-code-fails,fapi-rw-id2-par-attempt-reuse-request_uri,fapi-rw-id2-par-attempt-to-use-expired-request_uri"}'
+          - '{"plan":"fapi-rw-id2-test-plan","configuration":"./certification/fapi/pkjwt.json","fapi_auth_request_method":"by_value","client_auth_type":"private_key_jwt","fapi_profile":"plain_fapi","fapi_response_mode":"jarm"}'
+          - '{"plan":"fapi-rw-id2-test-plan","configuration":"./certification/fapi/pkjwt.json","fapi_auth_request_method":"pushed","client_auth_type":"private_key_jwt","fapi_profile":"plain_fapi","fapi_response_mode":"jarm","skip":"fapi-rw-id2-ensure-response-type-code-fails,fapi-rw-id2-par-attempt-reuse-request_uri,fapi-rw-id2-par-attempt-to-use-expired-request_uri"}'
+          - '{"plan":"fapi-rw-id2-test-plan","configuration":"./certification/fapi/mtls.json","fapi_auth_request_method":"by_value","client_auth_type":"mtls","fapi_profile":"plain_fapi","fapi_response_mode":"plain_response"}'
+          - '{"plan":"fapi-rw-id2-test-plan","configuration":"./certification/fapi/mtls.json","fapi_auth_request_method":"pushed","client_auth_type":"mtls","fapi_profile":"plain_fapi","fapi_response_mode":"plain_response","skip":"fapi-rw-id2-ensure-response-type-code-fails,fapi-rw-id2-par-attempt-reuse-request_uri,fapi-rw-id2-par-attempt-to-use-expired-request_uri"}'
+          - '{"plan":"fapi-rw-id2-test-plan","configuration":"./certification/fapi/mtls.json","fapi_auth_request_method":"by_value","client_auth_type":"mtls","fapi_profile":"plain_fapi","fapi_response_mode":"jarm"}'
+          - '{"plan":"fapi-rw-id2-test-plan","configuration":"./certification/fapi/mtls.json","fapi_auth_request_method":"pushed","client_auth_type":"mtls","fapi_profile":"plain_fapi","fapi_response_mode":"jarm","skip":"fapi-rw-id2-ensure-response-type-code-fails,fapi-rw-id2-par-attempt-reuse-request_uri,fapi-rw-id2-par-attempt-to-use-expired-request_uri"}'
     steps:
       - name: Checkout
         uses: actions/checkout@master
@@ -127,8 +133,8 @@ jobs:
         run: node certification/fapi &
         if: ${{ startsWith(fromJSON(matrix.setup).plan, 'fapi') }}
         env:
-          ISSUER: https://172.17.0.1:3001
-          PORT: 3001
+          ISSUER: https://172.17.0.1:3000
+          PORT: 3000
           NODE_OPTIONS: --tls-cipher-list="ECDHE-ECDSA-AES128-GCM-SHA256 ECDHE-ECDSA-AES256-GCM-SHA384 ECDHE-RSA-AES128-GCM-SHA256 ECDHE-RSA-AES256-GCM-SHA384"
           NODE_TLS_REJECT_UNAUTHORIZED: 0
       - name: Cache Conformance Suite Build
@@ -155,10 +161,10 @@ jobs:
       - name: Adjust configuration files for CI
         run: |
           sed -i -e 's/op.panva.cz/172.17.0.1:3000/g' certification/plan.json
-          sed -i -e 's/mtls.fapi.panva.cz/172.17.0.1:3001/g' certification/fapi/mtls.json
-          sed -i -e 's/fapi.panva.cz/172.17.0.1:3001/g' certification/fapi/mtls.json
-          sed -i -e 's/mtls.fapi.panva.cz/172.17.0.1:3001/g' certification/fapi/pkjwt.json
-          sed -i -e 's/fapi.panva.cz/172.17.0.1:3001/g' certification/fapi/pkjwt.json
+          sed -i -e 's/mtls.fapi.panva.cz/172.17.0.1:3000/g' certification/fapi/mtls.json
+          sed -i -e 's/fapi.panva.cz/172.17.0.1:3000/g' certification/fapi/mtls.json
+          sed -i -e 's/mtls.fapi.panva.cz/172.17.0.1:3000/g' certification/fapi/pkjwt.json
+          sed -i -e 's/fapi.panva.cz/172.17.0.1:3000/g' certification/fapi/pkjwt.json
       - name: Run ${{ matrix.setup }}
         run: npx mocha --delay --timeout 0 --retries 0 certification/runner
         env:
@@ -182,6 +188,7 @@ jobs:
       - test
       - conformance-suite
     strategy:
+      fail-fast: false
       matrix:
         app:
           - radiant-refuge-93411
