refactor: use private class fields in favour of weakmap where possible

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,6 @@
 {
   "extends": "airbnb-base",
+  "parser": "babel-eslint",
   "rules": {
     "no-empty": ["error", { "allowEmptyCatch": true }],
     "no-underscore-dangle": ["error", { "allow": ["_claim_names", "_claim_sources", "_matchedRouteName"] }],
