--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "devDependencies": {
     "@hapi/hapi": "^20.0.1",
+    "babel-eslint": "^10.1.0",
     "base64url": "^3.0.1",
     "chai": "^4.2.0",
     "clear-module": "^4.1.1",
