refactor: use jose@3 instead of jose@2
BREAKING CHANGE: JWT Header Parameter `client_id` in Request Objects is
now ignored.

BREAKING CHANGE: Request Objects now require `iss` and `aud` claims.

BREAKING CHANGE: `OIDCContext.prototype.dPoP` getter was removed.

BREAKING CHANGE: BaseToken.prototype.setThumbprint `jkt` mode now
expects the string thumbprint value instead of the jose.JWK instance.

BREAKING CHANGE: Client JWKS `kid` values are no longer automatically
calculated per RFC7638 when missing. As a result when client's public
keys are used to encrypt assertions the `kid` header will be missing
when such keys are used.

BREAKING CHANGE: Provider constructor will now reject JWKS that serve
no purpose (e.g. are only usable for encryption but encryption is
disabled).

BREAKING CHANGE: Provider's `jwks_uri` response will no longer include
`x5t` and `x5t#S256` values for keys with `x5c`.

BREAKING CHANGE: Client and Provider JWKS are validated to be
syntactically correct as before but only resolve to a `crypto.KeyObject`
when they're used.

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "debug": "^4.1.1",
     "ejs": "^3.1.5",
     "got": "^11.7.0",
-    "jose": "^2.0.4",
+    "jose": "^3.6.2",
     "jsesc": "^3.0.1",
     "koa": "^2.13.0",
     "koa-compose": "^4.1.0",
@@ -76,6 +76,7 @@
     "express": "^4.17.1",
     "fastify": "^3.7.0",
     "https-pem": "^2.0.0",
+    "jose2": "npm:jose@^2.0.4",
     "koa-body": "^4.2.0",
     "koa-ejs": "^4.3.0",
     "koa-helmet": "^6.0.0",
