--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
       - name: Setup node
-        uses: actions/setup-node@v2-beta
+        uses: actions/setup-node@v2
         with:
           node-version: 12
       - name: Store node version variable
@@ -48,6 +48,7 @@ jobs:
           - 12
           - 14.15.0
           - 14
+          - '>=15'
         os:
           - ubuntu-latest
           - windows-latest
