--- a/package.json
+++ b/package.json
@@ -75,11 +75,11 @@
     "eslint-plugin-import": "^2.22.1",
     "express": "^4.17.1",
     "fastify": "^3.7.0",
+    "helmet": "^4.4.1",
     "https-pem": "^2.0.0",
     "jose2": "npm:jose@^2.0.4",
     "koa-body": "^4.2.0",
     "koa-ejs": "^4.3.0",
-    "koa-helmet": "^6.0.0",
     "koa-mount": "^4.0.0",
     "koa-router": "^10.0.0",
     "lodash": "^4.17.20",
