ci: update run description

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -356,7 +356,7 @@ jobs:
           sed -i -e 's/fapi.panva.cz/172.17.0.1:3000/g' certification/fapi/mtls.json
           sed -i -e 's/mtls.fapi.panva.cz/172.17.0.1:3000/g' certification/fapi/pkjwt.json
           sed -i -e 's/fapi.panva.cz/172.17.0.1:3000/g' certification/fapi/pkjwt.json
-      - name: Run ${{ toJSON(matrix.setup) }}
+      - name: Run the plan
         run: npx mocha --delay --timeout 0 --retries 0 certification/runner
         env:
           NODE_TLS_REJECT_UNAUTHORIZED: 0
