ci: run conformance tests in parallel

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "lodash": "^4.17.20",
     "middie": "^5.2.0",
     "mocha": "^8.2.0",
+    "mocha.parallel": "^0.15.6",
     "moment": "^2.29.1",
     "nock": "^13.0.4",
     "nyc": "^15.1.0",
