--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "main": "lib/index.js",
   "scripts": {
     "ci": "node ./test/ci",
-    "coverage": "nyc node ./test/run",
+    "coverage": "c8 node ./test/run",
     "heroku-postbuild": "npm install mongodb@^3.0.0 openid-client@^4.0.0",
     "lint": "eslint lib example certification test",
     "lint-fix": "eslint lib example certification test --fix",
@@ -67,6 +67,7 @@
     "@hapi/hapi": "^20.0.1",
     "babel-eslint": "^10.1.0",
     "base64url": "^3.0.1",
+    "c8": "^7.7.2",
     "chai": "^4.2.0",
     "clear-module": "^4.1.1",
     "connect": "^3.7.0",
@@ -88,7 +89,6 @@
     "mocha.parallel": "^0.15.6",
     "moment": "^2.29.1",
     "nock": "^13.0.4",
-    "nyc": "^15.1.0",
     "sinon": "^10.0.0",
     "supertest": "^6.1.3",
     "timekeeper": "^2.2.0"
