--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -141,7 +141,7 @@ jobs:
             response_type: code
             client_registration: dynamic_client
 
-          # FAPI RW-ID2
+          # FAPI 1.0 R/W (ID2)
           - plan: fapi-rw-id2-test-plan
             configuration: ./certification/fapi/pkjwt.json
             fapi_auth_request_method: by_value
@@ -185,6 +185,56 @@ jobs:
             fapi_profile: plain_fapi
             fapi_response_mode: jarm
           - plan: fapi-rw-id2-test-plan
+            configuration: ./certification/fapi/mtls.json
+            fapi_auth_request_method: pushed
+            client_auth_type: mtls
+            fapi_profile: plain_fapi
+            fapi_response_mode: jarm
+
+          # FAPI 1.0 Advanced (Final)
+          - plan: fapi1-advanced-final-test-plan
+            configuration: ./certification/fapi/pkjwt.json
+            fapi_auth_request_method: by_value
+            client_auth_type: private_key_jwt
+            fapi_profile: plain_fapi
+            fapi_response_mode: plain_response
+          - plan: fapi1-advanced-final-test-plan
+            configuration: ./certification/fapi/pkjwt.json
+            fapi_auth_request_method: pushed
+            client_auth_type: private_key_jwt
+            fapi_profile: plain_fapi
+            fapi_response_mode: plain_response
+          - plan: fapi1-advanced-final-test-plan
+            configuration: ./certification/fapi/pkjwt.json
+            fapi_auth_request_method: by_value
+            client_auth_type: private_key_jwt
+            fapi_profile: plain_fapi
+            fapi_response_mode: jarm
+          - plan: fapi1-advanced-final-test-plan
+            configuration: ./certification/fapi/pkjwt.json
+            fapi_auth_request_method: pushed
+            client_auth_type: private_key_jwt
+            fapi_profile: plain_fapi
+            fapi_response_mode: jarm
+          - plan: fapi1-advanced-final-test-plan
+            configuration: ./certification/fapi/mtls.json
+            fapi_auth_request_method: by_value
+            client_auth_type: mtls
+            fapi_profile: plain_fapi
+            fapi_response_mode: plain_response
+          - plan: fapi1-advanced-final-test-plan
+            configuration: ./certification/fapi/mtls.json
+            fapi_auth_request_method: pushed
+            client_auth_type: mtls
+            fapi_profile: plain_fapi
+            fapi_response_mode: plain_response
+          - plan: fapi1-advanced-final-test-plan
+            configuration: ./certification/fapi/mtls.json
+            fapi_auth_request_method: by_value
+            client_auth_type: mtls
+            fapi_profile: plain_fapi
+            fapi_response_mode: jarm
+          - plan: fapi1-advanced-final-test-plan
             configuration: ./certification/fapi/mtls.json
             fapi_auth_request_method: pushed
             client_auth_type: mtls
@@ -348,16 +398,26 @@ jobs:
         if: ${{ steps.node_modules.outputs.cache-hit != 'true' }}
       - name: Run oidc-provider (OIDC)
         run: npx c8 node certification/docker &
-        if: ${{ startsWith(matrix.setup.plan, 'oidcc') }}
+        if: ${{ startsWith(matrix.setup.plan, 'oidcc-') }}
         env:
           PORT: 3000
           ISSUER: https://172.17.0.1:3000
           NODE_TLS_REJECT_UNAUTHORIZED: 0
-      - name: Run oidc-provider (FAPI)
+      - name: Run oidc-provider (FAPI 1.0 R/W - ID2)
         run: npx c8 node certification/fapi &
-        if: ${{ startsWith(matrix.setup.plan, 'fapi') }}
+        if: ${{ startsWith(matrix.setup.plan, 'fapi-') }}
         env:
           ISSUER: https://172.17.0.1:3000
+          PORT: 3000
+          PROFILE: '1.0 ID2'
+          NODE_OPTIONS: --tls-cipher-list="ECDHE-ECDSA-AES128-GCM-SHA256 ECDHE-ECDSA-AES256-GCM-SHA384 ECDHE-RSA-AES128-GCM-SHA256 ECDHE-RSA-AES256-GCM-SHA384"
+          NODE_TLS_REJECT_UNAUTHORIZED: 0
+      - name: Run oidc-provider (FAPI 1.0 Advanced - Final)
+        run: npx c8 node certification/fapi &
+        if: ${{ startsWith(matrix.setup.plan, 'fapi1-') }}
+        env:
+          ISSUER: https://172.17.0.1:3000
+          PROFILE: '1.0 Final'
           PORT: 3000
           NODE_OPTIONS: --tls-cipher-list="ECDHE-ECDSA-AES128-GCM-SHA256 ECDHE-ECDSA-AES256-GCM-SHA384 ECDHE-RSA-AES128-GCM-SHA256 ECDHE-RSA-AES256-GCM-SHA384"
           NODE_TLS_REJECT_UNAUTHORIZED: 0
